--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     //spring-jdbc  体会命令模式在其内部的应用
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.2.RELEASE'
 
+    //jep
+    compile group: 'org.scijava', name: 'jep', version: '2.4.2'
+
 
 }
